@@ -7,6 +7,7 @@ import sys
 from functools import wraps
 
 from contextlib import contextmanager
+import importlib_metadata
 
 from kombu.five import reraise
 
@@ -83,11 +84,10 @@ def detect_environment():
 
 def entrypoints(namespace):
     """Return setuptools entrypoints for namespace."""
-    try:
-        from pkg_resources import iter_entry_points
-    except ImportError:
-        return iter([])
-    return ((ep, ep.load()) for ep in iter_entry_points(namespace))
+    return (
+        (ep, ep.load())
+        for ep in importlib_metadata.entry_points().get(namespace, [])
+    )
 
 
 def fileno(f):
